# scor_proj

./: Euclidean distance .py  assign.py  bed-occupancy-rate_week40y2024.xlsx  bor_2023_data.csv  bor_2024_data.csv  bor_2324_data.csv  eda_for_2324_data.ipynb  eda_regression.py  hospital_occupancy_simulation_consolidated.xlsx  logistic_regression.ipynb  logistic_regression.py  logistic_regression.txt  pyproject.toml  regression.py  simulation.ipynb  simulation1.ipynb
DataSets/: audio_recording.csv  calls.csv  combined_emergency_probabilities.csv  emergency_probabilities.csv  finalised_dataset.csv  finalised_ifEmergency_dataset.csv
